# modernmt

./: .gitignore  .gitmodules  ACKNOWLEDGMENTS  AUTHORS  CMakeLists.txt  INSTALL.md  LICENSE  README.md  RELEASE.md  TEST.md  TODO.md  VISION-AND-ROADMAP.md  create-engine  filter_by_alignment.py  gitman.yml  hazelcast.xml  install  install.py  mert  mmt  mmt.py  pom.xml  requirements.txt  requirements_cuda-11.txt  server  setup.py  test.py  translate
Decoder/native/: CMakeLists.txt
Decoder/native/jheaders/: eu_modernmt_decoder_moses_MosesDecoder.h
Decoder/native/src/: JNIMosesDecoder.cpp  JNIMosesDecoder.h  JNIMosesDecoderInterface.cpp
Decoder/native/src/jni/: eu_modernmt_decoder_moses_MosesDecoder.cpp  handle.h  jconv.h  tconv.h
Decoder/native/src/wrapper/: Feature.h  MosesDecoder.cpp  Translation.cpp  TranslationHypothesis.h
src/Decoder/native/: CMakeLists.txt
src/Decoder/native/cmake/: FindMoses.cmake
src/Decoder/native/jheaders/: eu_modernmt_decoder_moses_MosesDecoder.h
src/Decoder/native/src/: main.cpp
src/FastAlign/native/: CMakeLists.txt
src/FastAlign/native/cmake/: FindFastAlign.cmake
src/FastAlign/native/executables/: fast_align.cpp
src/FastAlign/native/fastalign/: Corpus.cpp  Corpus.h  DiagonalAlignment.h  Model.cpp  Model.h  ModelBuilder.cpp  ModelBuilder.h  TTable.cpp  TTable.h
src/FastAlign/native/jheaders/: eu_modernmt_aligner_fastalign_FastAlign.h
src/FastAlign/native/jni/: eu_modernmt_aligner_fastalign_FastAlign.cpp  handle.h  jniutils.h
src/FastAlign/native/src/: eu_modernmt_aligner_fastalign_FastAlign.cpp  jniutil.h
src/Moses/native/: CMakeLists.txt
src/Moses/native/cmake/: FindMoses.cmake
src/Moses/native/cmake_modules/: FindMoses.cmake  FindRocksdb.cmake
src/Moses/native/decoder/: JNITranslator.h
src/Moses/native/executables/: buildvb.cpp  vbdecode.cpp  vbencode.cpp
src/Moses/native/jheaders/: eu_modernmt_decoder_moses_MosesDecoder.h
src/Moses/native/jni/: eu_modernmt_decoder_moses_MosesDecoder.cpp
src/Moses/native/src/: main.cpp
src/Moses/native/test/: buildvb.cpp  decoder_test.cpp  vocabulary_test.cpp
src/Moses/native/util/: TokenSource.cpp  TokenSource.h
src/Moses/native/vocabulary/: IMVocabulary.cpp  IMVocabulary.h  IdGenerator.cpp  IdGenerator.h  NewWordOperator.cpp  NewWordOperator.h  Vocabulary.cpp  Vocabulary.h  VocabularyBuilder.cpp  VocabularyBuilder.h
src/aligner-fastalign/src/native/: CMakeLists.txt
src/common-interfaces/native/: CMakeLists.txt  junk.cpp
src/common-interfaces/native/mmt/: IncrementalModel.h  sentence.h
src/commons/src/native/: CMakeLists.txt
src/decoder-phrasebased/src/native/: CMakeLists.txt
src/fastalign-aligner/native/: CMakeLists.txt
src/fastalign-aligner/native/cmake_modules/: FindMyOpenMP.cmake
src/fastalign-aligner/native/executables/: align.cpp  fa_align.cpp  fa_build.cpp  fast_align.cpp
src/fastalign-aligner/native/fastalign/: Corpus.cpp  Corpus.h  DiagonalAlignment.h  FastAligner.cpp  FastAligner.h  Model.cpp  Model.h  ModelBuilder.cpp  ModelBuilder.h
src/fastalign-aligner/native/java/: eu_modernmt_aligner_fastalign_FastAlign.cpp
src/fastalign-aligner/native/javah/: eu_modernmt_aligner_fastalign_FastAlign.h
src/fastalign-aligner/native/jheaders/: eu_modernmt_aligner_fastalign_FastAlign.h
src/fastalign-aligner/native/jni/: eu_modernmt_aligner_fastalign_FastAlign.cpp
src/fastalign-aligner/native/symal/: SymAlignment.cpp  SymAlignment.h
src/fastalign-aligner/native/util/: chrono.h
src/interpolated-lm/native/: CMakeLists.txt
src/interpolated-lm/native/cmake_modules/: FindMMTCommons.cmake  FindRocksdb.cmake  Findlzma.cmake
src/interpolated-lm/native/corpus/: CMakeLists.txt
src/interpolated-lm/native/db/: CMakeLists.txt  NGramBatch.cpp  NGramBatch.h  NGramStorage.cpp  NGramStorage.h  counts.h  dbkey.h
src/interpolated-lm/native/executables/: create_alm.cpp  dump_alm.cpp  query.cpp
src/interpolated-lm/native/lm/: AdaptiveLM.cpp  AdaptiveLM.h  AdaptiveLMCache.h  BufferedUpdateManager.cpp  BufferedUpdateManager.h  CachedLM.cpp  CachedLM.h  InterpolatedLM.cpp  InterpolatedLM.h  Options.h
src/interpolated-lm/native/util/: BackgroundPollingThread.cpp  CMakeLists.txt  chrono.h
src/moses-decoder/native/: CMakeLists.txt
src/moses-decoder/native/cmake_modules/: FindMoses.cmake
src/moses-decoder/native/decoder/: BaseManager.cpp  CMakeLists.txt  ConfusionNet.cpp  DecodeStepTranslation.h  ExportInterface.cpp  IOWrapper.cpp  IOWrapper.h  InputPath.h  JNITranslationRequest.cpp  LatticeMBR.cpp  LatticeMBR.h  Manager.cpp  Manager.h  MosesDecoder.cpp  MosesDecoder.h  NativeTranslationRequest.cpp  NativeTranslationRequest.h  ScoreComponentCollection.cpp  ScoreComponentCollection.h  ScoreComponentCollectionTest.cpp  Session.h  StaticData.cpp  StaticData.h  TranslationAnalysis.h  TranslationOption.cpp  TranslationOptionCollection.cpp  TranslationTask.cpp  TranslationTask.h  Translator.cpp  Translator.h  TreeInput.cpp  Util.cpp  WordLattice.cpp
src/moses-decoder/native/executables/: decoder_test.cpp  moses-main.cpp
src/moses-decoder/native/java/: CMakeLists.txt  JMosesFeature.h  JTranslation.cpp  eu_modernmt_decoder_moses_MosesDecoder.cpp  eu_modernmt_decoder_moses_NativeDataListener.cpp
src/moses-decoder/native/javah/: eu_modernmt_decoder_moses_MosesDecoder.h
src/moses-decoder/native/jni/: JMosesFeature.h  JTranslation.h
src/moses-decoder/native/mert/: CMakeLists.txt  mert.cpp  sentence-bleu.cpp
src/moses-decoder/native/util/: CMakeLists.txt
src/rocksdb-vocabulary/native/: CMakeLists.txt
src/rocksdb-vocabulary/native/cmake_modules/: FindTcmalloc.cmake
src/rocksdb-vocabulary/native/executables/: vbdecode.cpp
src/rocksdb-vocabulary/native/java/: eu_modernmt_vocabulary_rocksdb_RocksDBVocabulary.cpp  eu_modernmt_vocabulary_rocksdb_RocksDBVocabularyBuilder.cpp
src/rocksdb-vocabulary/native/javah/: eu_modernmt_vocabulary_rocksdb_RocksDBVocabulary.h  eu_modernmt_vocabulary_rocksdb_RocksDBVocabularyBuilder.h
src/rockslm/native/: CMakeLists.txt
src/rockslm/native/db/: NGramBatch.cpp  (+5 more)
src/suffixarray-phrasetable/native/: CMakeLists.txt
(+2836 files in other folders)
